css/style.css
@font-face {
  font-family: 'icomoon';
  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: 'Philosopher', sans-serif;
  font-weight: 300;
  font-size: 20px;
  line-height: 1.5;
  color: #7f7f7f;
  color: rgba(255, 255, 255, 0.7);
  background: url(../images/bg.jpg) repeat-x, repeat-y;
  /*background: -webkit-linear-gradient(rgba(30,87,153,0) 0%, rgba(30,87,153,0.8) 15%, rgba(30,87,153,1) 19%, rgba(30,87,153,1) 20%, rgba(41,137,216,1) 50%, rgba(30,87,153,1) 80%, rgba(30,87,153,1) 81%, rgba(30,87,153,0.8) 85%, rgba(30,87,153,0) 100%);
  background:         linear-gradient(rgba(30,87,153,0) 0%, rgba(30,87,153,0.8) 15%, rgba(30,87,153,1) 19%, rgba(30,87,153,1) 20%, rgba(41,137,216,1) 50%, rgba(30,87,153,1) 80%, rgba(30,87,153,1) 81%, rgba(30,87,153,0.8) 85%, rgba(30,87,153,0) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e5799', endColorstr='#001e5799',GradientType=0 );*/
  height: 100%;
  position: relative;
  background-attachment: fixed;
  background-repeat: repeat;
}
@media screen and (max-width: 768px) {
  body {
    background-position: center center;
    background-repeat: no-repeat;
  }
}

a {
  color: #CD2626;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}
a:hover, a:active, a:focus {
  color: #8B0000;
  outline: none;
}

p {
  margin-bottom: 1.5em;
}

h1, h2, h3, h4, h5, h6 {
  color: #fff;
  font-family: 'Philosopher', sans-serif;
  font-weight: 400;
  margin: 0 0 30px 0;
}

::-webkit-selection {
  color: #fff;
  background: #8B0000;
}

::-moz-selection {
  color: #fff;
  background: #8B0000;
}

::selection {
  color: #fff;
  background: #8B0000;
}

#fh5co-main {
  max-width: 760px;
  min-height: 600px;
  margin: 5em auto 5em auto;
  position: relative;
  background: rgba(0, 0, 0, 0.75);
  overflow: hidden;
  border-radius: 7px;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}
@media screen and (max-width: 768px) {
  #fh5co-main {
    margin: 2em .5em 5em .5em;
  }
}
/*++++++++++++choose language+++++++++++*/

#choose-lang {
  max-width: 760px;
  min-height: 400px;
  margin: 5em auto 5em auto;
  position: relative;
  background: rgba(205, 38, 38, 0.3);
  overflow: hidden;
  border-radius: 7px;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  box-shadow:0 0 10px rgba(139, 26, 26, 0.7);
}
.choose-row{
  margin-top: 30px;
}
.ch-grid {
	margin: 20px 0 0 0;
	padding: 0;
	list-style: none;
	display: block;
	text-align: center;
	width: 100%;
}
.ch-grid:after,
.ch-item:before {
	  content: '';
    display: table;
}
.ch-grid:after {
	clear: both;
}
.ch-grid li {
	width: 220px;
	height: 220px;
	display: inline-block;
	margin: 20px;
}
.ch-item {
	width: 100%;
	height: 100%;
	border-radius: 50%;
	overflow: hidden;
	position: relative;
	cursor: default;
	box-shadow: inset 0 0 0 16px rgba(255,255,255,0.6),
		                0 1px 2px rgba(0,0,0,0.1);
	-webkit-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
  cursor: pointer;
}
.ch-img-1 {
	background-image: url(../images/en.jpg);
}
.ch-img-2 {
	background-image: url(../images/ru.jpg);
}
.ch-info {
	position: absolute;
	background: rgba(205, 92, 92, 0.8);
	width: inherit;
	height: inherit;
	border-radius: 50%;
	overflow: hidden;
	opacity: 0;
	-webkit-transition: all 0.4s ease-in-out;
	transition: all 0.4s ease-in-out;
	-webkit-transform: scale(0);
	        transform: scale(0);
}
.ch-info h3 {
	color: #fff;
	text-transform: uppercase;
	letter-spacing: 2px;
	font-size: 22px;
	margin: 0 30px;
	padding: 45px 0 0 0;
	height: 140px;
	font-family: 'Open Sans', Arial, sans-serif;
	text-shadow:
		0 0 1px #fff,
		0 1px 2px rgba(0,0,0,0.3);
}
.ch-info p {
	color: #fff;
	padding: 10px 5px;
	font-style: italic;
	margin: 0 30px;
	font-size: 12px;
	border-top: 1px solid rgba(255,255,255,0.5);
	opacity: 0;
	-webkit-transition: all 1s ease-in-out 0.4s;
	transition: all 1s ease-in-out 0.4s;
}
.ch-item:hover {
	box-shadow:
		inset 0 0 0 1px rgba(255,255,255,0.1),
		0 1px 2px rgba(0,0,0,0.1);
}
.ch-item:hover .ch-info {
	-webkit-transform: scale(1);
	        transform: scale(1);
	opacity: 1;
}
.ch-item:hover .ch-info p {
	opacity: 1;
}
.eng, .rus{
  text-decoration: none;
}

/*+++++++++++end of choosing lang++++++++++++++++++++*/

.download-resume{
  font-size: 1.5em;
}
.about{
  text-align: justify;
}
.fh5co-tab-wrap {
  position: relative;
}
.fh5co-tab-wrap .fh5co-tab-menu {
  list-style: none;
  text-align: center;
  margin-bottom: 2em;
  position: relative;
  top: -.5em;
  padding: 0;
  margin: 0;
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-menu {
    top: -7px;
  }
}
.fh5co-tab-wrap .fh5co-tab-menu li {
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
  text-align: center;
  padding: 0;
  margin: 0;
}
.fh5co-tab-wrap .fh5co-tab-menu li a {
  padding: 2em 1em 1em 1em;
  position: relative;
  color: rgba(255, 255, 255, 0.5);
  z-index: 10;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}
.fh5co-tab-wrap .fh5co-tab-menu li a .icon {
  display: block;
  position: relative;
  font-size: 22px;
  bottom: 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}
.fh5co-tab-wrap .fh5co-tab-menu li a .menu-text {
  display: block;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-menu li a .menu-text {
    display: none;
  }
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-menu li a {
    padding: 1em .5em .5em .5em;
  }
}
.fh5co-tab-wrap .fh5co-tab-menu li a:after {
  position: absolute;
  content: "";
  height: 0;
  background: #8B0000;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
          transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  border-radius: 7px;
}
.fh5co-tab-wrap .fh5co-tab-menu li a:hover {
  color: #fff;
  text-decoration: none;
}
.fh5co-tab-wrap .fh5co-tab-menu li a:hover .icon {
  bottom: 10px;
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-menu li a:hover .icon {
    bottom: 0px;
  }
}
.fh5co-tab-wrap .fh5co-tab-menu li a:hover:after {
  height: 100%;
}
.fh5co-tab-wrap .fh5co-tab-menu li.active .icon {
  bottom: 10px;
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-menu li.active .icon {
    bottom: 0px;
  }
}
.fh5co-tab-wrap .fh5co-tab-menu li.active > a {
  color: #fff;
  text-decoration: none;
}
.fh5co-tab-wrap .fh5co-tab-menu li.active > a:after {
  height: 100%;
}
.fh5co-tab-wrap .fh5co-tab-content {
  padding-left: 4em;
  padding-right: 4em;
  position: absolute;
  top: 0;
  opacity: 0;
  visibility: hidden;
  width: 100%;
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-content {
    padding-left: .5em;
    padding-right: .5em;
  }
}
.fh5co-tab-wrap .fh5co-tab-content.active {
  opacity: 1;
  visibility: visible;
}
.fh5co-tab-wrap .fh5co-tab-content .fh5co-content-inner {
  padding: 7em 2em 5em 2em;
  float: left;
  width: 100%;
  position: relative;
}
@media screen and (max-width: 768px) {
  .fh5co-tab-wrap .fh5co-tab-content .fh5co-content-inner {
    padding: 4em .5em 5em .5em;
  }
}

figure {
  margin-bottom: 1.5em;
}

.fh5co-counter .fh5co-number {
  font-size: 100px;
  color: #8B0000;
  font-weight: 400;
  margin: 0;
  padding: 0;
  line-height: .7;
}
.fh5co-counter .fh5co-number.fh5co-left {
  float: left;
  width: 30%;
}
@media screen and (max-width: 768px) {
  .fh5co-counter .fh5co-number.fh5co-left {
    width: 100%;
    line-height: 1.2;
  }
}
.fh5co-counter .fh5co-text {
  float: right;
  text-align: left;
  width: 70%;
}
@media screen and (max-width: 768px) {
  .fh5co-counter .fh5co-text {
    width: 100%;
    text-align: center;
  }
}
.fh5co-counter .fh5co-text h3 {
  margin: 0;
  padding: 0;
  position: relative;
}
.fh5co-counter .fh5co-text h3.border-bottom:after {
  content: "";
  width: 50px;
}

.fh5co-social {
  padding: 0;
  margin: 0;
  text-align: center;
}
.fh5co-social li {
  padding: 0;
  margin: 0;
  list-style: none;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
}
.fh5co-social li a {
  font-size: 22px;
  color: #fff;
  padding: 10px 20px;
  display: -moz-inline-stack;
  display: inline-block;
  zoom: 1;
  *display: inline;
  border-radius: 7px;
}
@media screen and (max-width: 768px) {
  .fh5co-social li a {
    padding: 10px 8px;
  }
}
.fh5co-social li a:hover {
  color: #8B0000;
}
.fh5co-social li a:hover, .fh5co-social li a:active, .fh5co-social li a:focus {
  outline: none;
  text-decoration: none;
}

.fh5co-feature {
  text-align: left;
  width: 100%;
  float: left;
}
.fh5co-feature .fh5co-icon {
  float: left;
  width: 10%;
  display: block;
  margin-top: 5px;
}
.fh5co-feature .fh5co-icon i {
  color: #8B0000;
  font-size: 40px;
}
.fh5co-feature .fh5co-text {
  float: right;
  width: 82%;
}
@media screen and (max-width: 768px) {
  .fh5co-feature .fh5co-text {
    width: 82%;
  }
}
@media screen and (max-width: 480px) {
  .fh5co-feature .fh5co-text {
    width: 72%;
  }
}
.fh5co-feature .fh5co-text h2, .fh5co-feature .fh5co-text h3 {
  margin: 0;
  padding: 0;
}
.fh5co-feature .fh5co-text h3 {
  font-weight: 300;
  margin-bottom: 10px;
  color: rgba(255, 255, 255, 0.8);
  font-size: 20px;
}
.fh5co-feature .fh5co-text h2 {
  font-size: 16px;
  letter-spacing: 2px;
  font-weight: bold;
  text-transform: uppercase;
}

.chart {
  width: 160px;
  height: 160px;
  margin: 0 auto 30px auto;
  position: relative;
  text-align: center;
}
.chart span {
  position: absolute;
  top: 50%;
  left: 0;
  margin-top: -30px;
  width: 100%;
}
.chart span strong {
  display: block;
}
.chart canvas {
  position: absolute;
  left: 0;
  top: 0;
}

#fh5co-footer {
  margin-top: 50px;
  background: black;
  clear: both;
  color: rgba(255, 255, 255, 0.6);
  font-size: 14px;
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 20px 20px;
  line-height: 1.2;
}
#fh5co-footer small {
  font-size: 14px;
}
#fh5co-footer .fh5co-author {
  display: block;
}
@media screen and (max-width: 768px) {
  #fh5co-footer .fh5co-author {
    display: -moz-inline-stack;
    display: inline-block;
    zoom: 1;
    *display: inline;
  }
}

@media screen and (max-width: 480px) {
  .col-xxs-12 {
    float: none;
    width: 100%;
  }
}

.row-bottom-padded-lg {
  padding-bottom: 7em;
}
@media screen and (max-width: 768px) {
  .row-bottom-padded-lg {
    padding-bottom: 1em;
  }
}

.row-bottom-padded-md {
  padding-bottom: 4em;
}
@media screen and (max-width: 768px) {
  .row-bottom-padded-md {
    padding-bottom: 1em;
  }
}

.row-bottom-padded-sm {
  padding-bottom: 1em;
}
@media screen and (max-width: 768px) {
  .row-bottom-padded-sm {
    padding-bottom: 1em;
  }
}
.mymail{
  color: #8B0000;
}

